[package]
name = "i_tree"
version = "0.6.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2021"
description = "Red-black tree implementation for rust. Only for uniq elements"
license = "MIT"
repository = "https://github.com/iShape-Rust/iTree"

[dev-dependencies]
rand = "0.8.5"

i_float = { version = "1.0.3" }
#i_float = { path = "../iFloat" }
