[package]
name = "i_tree"
version = "0.9.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Red-black tree implementation for rust. Only for uniq elements"
license = "MIT"
repository = "https://github.com/iShape-Rust/iTree"

[dev-dependencies]
rand = "0.8.5"

i_float = { version = "^1.7.0" }
#i_float = { path = "../iFloat" }
