[package]
name = "i_tree"
version = "0.10.1"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Expiration key tree. Usable in algorithms like swipe line. Only for uniq elements"
license = "MIT"
repository = "https://github.com/iShape-Rust/iTree"

[dev-dependencies]
rand = "0.9.0"

i_float = { version = "^1.9.0" }
#i_float = { path = "../iFloat" }
